# serializer version: 1
# name: TestChangeSampleRights.test_set_none_group_id[mongo]
  dict({
    '_id': 'test',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
      dict({
        'download_url': '/download/samples/files/file_1.fq.gz',
        'id': 'foo',
        'name': 'Bar.fq.gz',
      }),
    ]),
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'pathoscope': True,
    'ready': True,
    'subtractions': list([
      'apple',
      'pear',
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestChangeSampleRights.test_set_none_group_id[resp]
  dict({
    'all_read': True,
    'all_write': True,
    'group': None,
    'group_read': True,
    'group_write': True,
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_all_rights[mongo]
  dict({
    '_id': 'test',
    'all_read': False,
    'all_write': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
      dict({
        'download_url': '/download/samples/files/file_1.fq.gz',
        'id': 'foo',
        'name': 'Bar.fq.gz',
      }),
    ]),
    'format': 'fastq',
    'group': 1,
    'group_read': False,
    'group_write': False,
    'hold': False,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'pathoscope': True,
    'ready': True,
    'subtractions': list([
      'apple',
      'pear',
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_all_rights[resp]
  dict({
    'all_read': False,
    'all_write': False,
    'group': 1,
    'group_read': False,
    'group_write': False,
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_all_user_rights[mongo]
  dict({
    '_id': 'test',
    'all_read': False,
    'all_write': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
      dict({
        'download_url': '/download/samples/files/file_1.fq.gz',
        'id': 'foo',
        'name': 'Bar.fq.gz',
      }),
    ]),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'pathoscope': True,
    'ready': True,
    'subtractions': list([
      'apple',
      'pear',
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_all_user_rights[resp]
  dict({
    'all_read': False,
    'all_write': False,
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_group_id[mongo]
  dict({
    '_id': 'test',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
      dict({
        'download_url': '/download/samples/files/file_1.fq.gz',
        'id': 'foo',
        'name': 'Bar.fq.gz',
      }),
    ]),
    'format': 'fastq',
    'group': 1,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'pathoscope': True,
    'ready': True,
    'subtractions': list([
      'apple',
      'pear',
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_group_id[resp]
  dict({
    'all_read': True,
    'all_write': True,
    'group': 1,
    'group_read': True,
    'group_write': True,
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_group_rights[mongo]
  dict({
    '_id': 'test',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
      dict({
        'download_url': '/download/samples/files/file_1.fq.gz',
        'id': 'foo',
        'name': 'Bar.fq.gz',
      }),
    ]),
    'format': 'fastq',
    'group': 'none',
    'group_read': False,
    'group_write': False,
    'hold': False,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'id': 'bf1b993c',
    }),
    'labels': list([
      1,
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'pathoscope': True,
    'ready': True,
    'subtractions': list([
      'apple',
      'pear',
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestChangeSampleRights.test_update_group_rights[resp]
  dict({
    'all_read': True,
    'all_write': True,
    'group': 'none',
    'group_read': False,
    'group_write': False,
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: TestCreate.test_name_exists[json]
  dict({
    'id': 'bad_request',
    'message': 'Sample name is already in use',
  })
# ---
# name: TestCreate.test_ok[force_choice][resp]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'approximately_now_isoformat',
    'format': 'fastq',
    'group': dict({
      'id': 2,
      'legacy_id': None,
      'name': 'gaffers',
    }),
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 'bf1b993c',
      'progress': 0,
      'retries': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#11af93',
        'description': 'Quickly candidate change although.',
        'id': 1,
        'name': 'Maybe',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': list([
    ]),
    'ready': False,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'approximately_now_isoformat',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': 'uuid-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'approximately_now_isoformat',
        'user': dict({
          'handle': 'johnsoncynthia',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestCreate.test_ok[none][resp]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'approximately_now_isoformat',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 'bf1b993c',
      'progress': 0,
      'retries': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#11af93',
        'description': 'Quickly candidate change although.',
        'id': 1,
        'name': 'Maybe',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': list([
    ]),
    'ready': False,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'approximately_now_isoformat',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': 'uuid-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'approximately_now_isoformat',
        'user': dict({
          'handle': 'johnsoncynthia',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestCreate.test_ok[users_primary_group][resp]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': 'approximately_now_isoformat',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 'bf1b993c',
      'progress': 0,
      'retries': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#11af93',
        'description': 'Quickly candidate change although.',
        'id': 1,
        'name': 'Maybe',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': list([
    ]),
    'ready': False,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
    ]),
    'uploads': list([
      dict({
        'created_at': 'approximately_now_isoformat',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': 'uuid-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': 'approximately_now_isoformat',
        'user': dict({
          'handle': 'johnsoncynthia',
          'id': 2,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestEdit.test_label_exists[json]
  dict({
    'id': 'bad_request',
    'message': 'Labels do not exist: [1]',
  })
# ---
# name: TestEdit.test_ok
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
      dict({
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'size': 34879234,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'test_sample',
    'notes': 'This is a test.',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': list([
      dict({
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'peach',
        'name': 'Peach',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestEdit.test_subtraction_exists[json]
  dict({
    'id': 'bad_request',
    'message': 'Subtractions do not exist: bar',
  })
# ---
# name: TestFind.test_labels[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_labels[labels1]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_labels[labels2]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_labels[labels3]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_page_per_page[2-1]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  })
# ---
# name: TestFind.test_page_per_page[2-2]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 2,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  })
# ---
# name: TestFind.test_page_per_page[None-None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_term[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_term[gv]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_term[sp]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_workflows[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_workflows[workflows1]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_workflows[workflows2]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 30,
          'retries': 0,
          'stage': 'HTCWaKMqqBTFitpKyPAV',
          'state': 'terminated',
          'user': dict({
            'handle': 'leeashley',
            'id': 1,
          }),
          'workflow': 'create_sample',
        }),
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
          dict({
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          }),
        ]),
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_workflows[workflows3]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': list([
          dict({
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          }),
        ]),
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': list([
          dict({
            'color': '#78bc72',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Add',
          }),
        ]),
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'uploads': None,
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflows': dict({
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        }),
      }),
    ]),
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestGet.test_administrator[resp]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
      dict({
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'size': 34879234,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': list([
      dict({
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'pear',
        'name': 'Pear',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestGet.test_all_read[resp]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
      dict({
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'size': 34879234,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': list([
      dict({
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'pear',
        'name': 'Pear',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'turnermary',
      'id': 3,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestGet.test_group_read[False][resp]
  dict({
    'id': 'insufficient_rights',
    'message': 'Insufficient rights',
  })
# ---
# name: TestGet.test_group_read[True][resp]
  dict({
    'all_read': False,
    'all_write': False,
    'artifacts': list([
      dict({
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'size': 34879234,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'chiropodists',
    }),
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': list([
      dict({
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'pear',
        'name': 'Pear',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'kellywoods',
      'id': 3,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestGet.test_owner[resp]
  dict({
    'all_read': False,
    'all_write': True,
    'artifacts': list([
      dict({
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'size': 34879234,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': list([
      dict({
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      }),
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'pear',
        'name': 'Pear',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'zwilliams',
      'id': 2,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: TestUploadReads.test[409]
  dict({
    'id': 'conflict',
    'message': 'Reads file name is already uploaded for this sample',
  })
# ---
# name: TestUploadReads.test_uncompressed
  dict({
    'id': 'bad_request',
    'message': 'File is not compressed',
  })
# ---
# name: test_analyze[None]
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 'bf1b993c',
    'index': dict({
      'id': 'test',
      'version': 4,
    }),
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'retries': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'pathoscope_bowtie',
    }),
    'ml': None,
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 'test_ref',
      'name': 'Test Reference',
    }),
    'results': None,
    'sample': dict({
      'id': 'test',
    }),
    'subtractions': list([
      dict({
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      }),
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'pathoscope_bowtie',
  })
# ---
# name: test_finalize[quality]
  dict({
    'all_read': True,
    'all_write': True,
    'artifacts': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
      dict({
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      }),
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': dict({
      'bases': list([
        list([
          1543,
        ]),
      ]),
      'composition': list([
        list([
          6372,
        ]),
      ]),
      'count': 7069,
      'encoding': 'OuBQPPuwYimrxkNpPWUx',
      'gc': 34222440,
      'length': list([
        3237,
      ]),
      'sequences': list([
        7091,
      ]),
    }),
    'reads': list([
    ]),
    'ready': True,
    'subtractions': list([
      dict({
        'id': 'apple',
        'name': 'Apple',
      }),
      dict({
        'id': 'pear',
        'name': 'Pear',
      }),
    ]),
    'uploads': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    }),
  })
# ---
# name: test_find_analyses
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_1',
        'index': dict({
          'id': 'foo',
          'version': 2,
        }),
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 0,
          'retries': 0,
          'stage': None,
          'state': 'waiting',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'pathoscope_bowtie',
        }),
        'ml': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 'baz',
          'name': 'Baz',
        }),
        'sample': dict({
          'id': 'test',
        }),
        'subtractions': list([
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope_bowtie',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_2',
        'index': dict({
          'id': 'foo',
          'version': 2,
        }),
        'job': None,
        'ml': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 'baz',
          'name': 'Baz',
        }),
        'sample': dict({
          'id': 'test',
        }),
        'subtractions': list([
          dict({
            'id': 'foo',
            'name': 'Malus domestica',
          }),
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope_bowtie',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_3',
        'index': dict({
          'id': 'foo',
          'version': 2,
        }),
        'job': None,
        'ml': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'sample': dict({
          'id': 'test',
        }),
        'subtractions': list([
          dict({
            'id': 'foo',
            'name': 'Malus domestica',
          }),
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'pathoscope_bowtie',
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_upload_artifact[None]
  dict({
    'id': 1,
    'name': 'small.fq.gz',
    'name_on_disk': 'small.fq.gz',
    'sample': 'test',
    'size': 723988,
    'type': 'fastq',
    'uploaded_at': '2015-10-06T20:00:00Z',
  })
# ---
